...
    <string name="palette_notice_no_change">The palette has no changes to apply</string>
    <string name="quick_select">Quick select</string>
    <string name="quick_select_state_slot">Palette color %1$d</string>
    <string name="quick_select_state_eyedropper">Eyedropper ready</string>
    <string name="quick_select_slot">Palette color %1$d</string>
    <string name="quick_select_eyedropper">Eyedropper</string>
    <string name="layers">Layers</string>
    <string name="layer_default_name">Layer %1$d</string>
    <string name="layer_count">%1$d / %2$d</string>
    <string name="layer_count_description">%1$d of %2$d</string>
    <string name="layer_chip">Open layers</string>
    <string name="layer_chip_state">Current layer: %1$s</string>
    <string name="layer_chip_state_hidden">Current layer: %1$s, hidden</string>
    <string name="layer_panel_close">Close layers</string>
    <string name="layer_row">%1$s</string>
    <string name="layer_row_state_current">Drawing target</string>
    <string name="layer_show">Show %1$s</string>
    <string name="layer_hide">Hide %1$s</string>
    <string name="layer_more">More actions for %1$s</string>
    <string name="layer_rename">Rename</string>
    <string name="layer_move_up">Move up</string>
    <string name="layer_move_down">Move down</string>
    <string name="layer_delete">Delete</string>
    <string name="layer_add">Add layer</string>
...
